--- a/index.html
+++ b/index.html
@@ -19,3 +19,16 @@
 
 </body>
 </html>
+</ul>
+  </header>
+
+< section class= 
+         <div class="imagem-cursista"src= "">
+
+<h2 class=" nome-cursista"> Nome: Maira Sinhori Tumasz</h2>
+<h2 class="cidade-cursista"> cidade: Irati </h2>
+</div>
+
+</body>
+</html>
+</html>
